# blockchain

./: README.md  block.py  blockchain.py  main.py  proof.py  pyproject.toml  requirements.txt
.github/workflows/: type-check.yml
blockchain/: __main__.py  block.py  transaction.py
