[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = "Blockchain implementation"
authors = ["0918nobita <nobita.0918@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
namespace_packages = true
explicit_package_bases = true
